--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -8,7 +8,6 @@ mat-form-field-2 {
 
 mat-card {
     margin-bottom: 1em;
-    border: 5px rgb(53, 53, 53) solid;
     border-radius: 1px;
     width: 50%;
     background: rgb(255, 255, 255);
@@ -36,6 +35,8 @@ mat-hint {
 .welcome-title {
     font-size: 62px;
     margin-bottom: 25px;
+    vertical-align: middle;
+    text-align: center;
 }
 
 .login-button {
@@ -62,3 +63,229 @@ input {
     vertical-align: top;
 }
 */
+
+
+.card {
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 210px 210px 80px;
+    grid-template-areas: "image""text""stats";
+    border-radius: 18px;
+    background: white;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    font-family: roboto;
+    text-align: center;
+    width: 301px;
+    height: 450px;
+    transition: 0.5s ease;
+    cursor: pointer;
+    margin: 30px;
+}
+
+.card-image {
+    grid-area: image;
+}
+
+.card-text {
+    grid-area: text;
+    margin: 25px;
+}
+
+.card-text p {
+    color: grey;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.card-text h2 {
+    margin-top: 0px;
+    font-size: 28px;
+}
+
+.card-stats {
+    grid-area: stats;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: rgb(92, 21, 150);
+}
+
+.card-image {
+    grid-area: image;
+    background: url("../../../assets/images/research.jpg");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+}
+
+.card-image-participant {
+    grid-area: image;
+    background: url("../../../assets/images/participant.jpg");
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
+}
+
+.card:hover {
+    transform: scale(1.15);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+}
+
+.login-div {
+    padding: 20px 35px 35px 35px;
+    border-radius: 10px;
+    background: radial-gradient(circle, #879cc7, #879cc7, #879cc7, #788bb3, #7a8db6);
+
+    filter: blur(0.4px);
+    box-shadow:
+        /*bottom shadow*/
+        0px 20px 20px rgba(0, 0, 0, 0.2),
+        0px 5px 10px rgba(0, 0, 0, 0.2),
+        /*long bottom shadow*/
+        0px 70px 50px rgba(0, 0, 0, 0.4),
+        /*right shadow*/
+        30px 50px 50px rgba(0, 0, 0, 0.2),
+        /*left shadow*/
+        -30px 50px 50px rgba(0, 0, 0, 0.2),
+        /*right inset*/
+        inset 20px 0px 60px rgba(0, 0, 0, 0.1),
+        /*left inset*/
+        inset -20px 0px 60px rgba(0, 0, 0, 0.1);
+}
+
+.register-div {
+    padding: 20px 35px 35px 35px;
+    border-radius: 10px;
+    background: radial-gradient(circle, #e0f0ff, #e0f0ff, #e0f0ff, #d1e1f0, #c9d9e7);
+    width: 800px;
+    filter: blur(0.4px);
+    box-shadow:
+        /*bottom shadow*/
+        0px 20px 20px rgba(0, 0, 0, 0.2),
+        0px 5px 10px rgba(0, 0, 0, 0.2),
+        /*long bottom shadow*/
+        0px 70px 50px rgba(0, 0, 0, 0.4),
+        /*right shadow*/
+        30px 50px 50px rgba(0, 0, 0, 0.2),
+        /*left shadow*/
+        -30px 50px 50px rgba(0, 0, 0, 0.2),
+        /*right inset*/
+        inset 20px 0px 60px rgba(0, 0, 0, 0.1),
+        /*left inset*/
+        inset -20px 0px 60px rgba(0, 0, 0, 0.1);
+}
+
+
+.logo {
+    background-image: url("../../../assets/images/logo.jpg");
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    background-repeat: no-repeat;
+}
+
+.title {
+    text-align: center;
+    font-size: 28px;
+    padding-top: 14px;
+    letter-spacing: 0.5px;
+    color: white;
+    margin: 0 auto;
+}
+
+.sub-title {
+    text-align: center;
+    font-size: 15px;
+    padding-top: 7px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+    margin: 0 auto;
+}
+
+.fields {
+    width: 100%;
+    padding: 20px 5px 30px 5px;
+    margin: 0 auto;
+}
+
+.fields input {
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    padding: 10px 10px 10px 5px;
+}
+
+.username,
+.password {
+    display: block;
+    border-bottom: 2px solid #ffffff;
+    margin-bottom: 30px;
+}
+
+.username-reg,
+.password-reg {
+    display: block;
+}
+
+::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    opacity: 1;
+    /* Firefox */
+    color: rgb(212, 211, 211);
+    font-size: 20px;
+    font-weight: 300;
+}
+
+::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.signin-button {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+    border-radius: 5px;
+    font-size: 22px;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    text-align: center;
+    letter-spacing: 1px;
+    background: radial-gradient(circle, #24cfaa, #26c5a3, #28bb9c, #29b294, #2aa88d);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.signin-button:hover {
+    background: radial-gradient(circle, #2fdbb6, #32d6b3, #32c9a8, #36c7a7, #38bb9f);
+}
+
+.signin-button:active {
+    background: radial-gradient(circle, #1da88a, #1ea084, #229c82, #23947b, #238d76);
+}
+
+.link {
+    padding-top: 10px;
+    text-align: center;
+}
+
+.link a {
+    text-decoration: underline;
+    color: white;
+    font-size: 20px;
+}
+
+.fields svg {
+    height: 22px;
+    margin-bottom: -3px;
+    margin-right: 10px;
+}
