--- a/src/app/views/studies/available.component.html
+++ b/src/app/views/studies/available.component.html
@@ -1,11 +1,18 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 <div *ngIf="displayStudy" style="padding-bottom: 3em">
     <mat-card *ngIf="model.type === 0">
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
         <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong> {{ model.creationDate | date: 'dd/MM/yyyy' }}
+            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
+                {{ model.creationDate | date: 'dd/MM/yyyy' }}
             </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}</mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}
+            </mat-card-subtitle>
         </mat-card>
         <mat-card-content>
             <div class="qa" *ngFor="let question of model.questions; let i = index">
@@ -41,10 +48,13 @@
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
         <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong> {{ model.creationDate | date: 'dd/MM/yyyy' }}
+            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
+                {{ model.creationDate | date: 'dd/MM/yyyy' }}
             </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}</mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.description' | translate}}: </strong> {{ model.description ? model.description : 'N/A' }}</mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}
+            </mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.description' | translate}}: </strong>
+                {{ model.description ? model.description : 'N/A' }}</mat-card-subtitle>
         </mat-card>
         &nbsp;
         &nbsp;
@@ -58,19 +68,23 @@
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
         <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong> {{ model.creationDate | date: 'dd/MM/yyyy' }}
+            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
+                {{ model.creationDate | date: 'dd/MM/yyyy' }}
             </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}</mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.author' | translate}}:</strong> {{ model.researcher }}
+            </mat-card-subtitle>
         </mat-card>
         <mat-card-content>
             <div class="qa" *ngFor="let entry of model.entries; let i = index">
                 <mat-form-field>
-                    <input matInput [matDatepicker]="picker" [(ngModel)]="entry.date" placeholder="{{'studies-components.date_choose' | translate}}">
+                    <input matInput [matDatepicker]="picker" [(ngModel)]="entry.date"
+                        placeholder="{{'studies-components.date_choose' | translate}}">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
                 <mat-form-field>
-                    <textarea matInput placeholder="{{'studies-components.entry' | translate}}" [(ngModel)]="entry.entry"></textarea>
+                    <textarea matInput placeholder="{{'studies-components.entry' | translate}}"
+                        [(ngModel)]="entry.entry"></textarea>
                 </mat-form-field>
             </div>
             <div fxLayout="row" fxLayoutAlign="center center">
@@ -96,54 +110,50 @@
 </div>
 
 <div *ngIf="!displayStudy">
-    <nav mat-tab-nav-bar *ngIf="loggedInUser.role === 0 || loggedInUser.role === 2" selectedIndex="0">
-        <a mat-tab-link label="Available" routerLink="/available-studies" routerLinkActive #rla="routerLinkActive"
-            [active]="rla.isActive">{{'studies-components.studies_available' | translate}}</a>
-        <a mat-tab-link label="In Progress" routerLink="/inprogress-studies">{{'studies-components.studies_inprogress' | translate}}</a>
-        <a mat-tab-link label="Complete" routerLink="/complete-studies">{{'studies-components.studies_completed' | translate}}</a>
-    </nav>
-    <nav mat-tab-nav-bar *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1" selectedIndex="0">
-        <a mat-tab-link label="Available" routerLink="/available-studies" routerLinkActive #rla="routerLinkActive"
-            [active]="rla.isActive">{{'studies-components.published_studies' | translate}}</a>
-        <a mat-tab-link label="Chat Logs" routerLink="/chatlog-view">{{'studies-components.chat_logs' | translate}}</a>
-        <a mat-tab-link label="Completed Studies" routerLink="/researcher-completed-studies">{{'studies-components.completed_studies' | translate}}</a>
-    </nav>
 
-    <div fxLayout="row" fxLayoutGap="1em" fxLayoutAlign="center center">
-        <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{'studies-components.search' | translate}}">
-        </mat-form-field>
-        <button color="accent" mat-raised-button (click)="addEntry()"
-            *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1">Add</button>
+    <div class="input-group md-form form-sm form-1 pl-0">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-text1" style="background: #c48cff;">
+                <mat-icon>search</mat-icon>
+            </span>
+        </div>
+        <input matInput (keyup)="applyFilter($event.target.value)"
+            placeholder="{{'studies-components.search' | translate}}" class="form-control my-0 py-1" type="text"
+            aria-label="Search">
+        <button class="btn-gradient blue" mat-raised-button
+            (click)="addEntry()">{{'users-components.add_button' | translate}}</button>
     </div>
 
     <div *ngIf="entryFlag || editEntryFlag">
+        <br>
         <mat-card>
             <mat-card-title class="entry-card-title">{{editEntryFlag ? "Edit Entry" : "Add Entry"}}</mat-card-title>
             <mat-card-content>
                 <div fxLayout="row" fxLayoutGap="1em">
                     <mat-form-field>
-                        <input matInput placeholder="{{'studies-components.enter_title' | translate}}" [(ngModel)]="model.title"
-                            [formControl]="titleFormControl"
-                            [errorStateMatcher]="matcher">
-                        <mat-hint *ngIf="!titleFormControl.hasError('required')">{{'studies-components.required_field' | translate}}</mat-hint>
+                        <input matInput placeholder="{{'studies-components.enter_title' | translate}}"
+                            [(ngModel)]="model.title" [formControl]="titleFormControl" [errorStateMatcher]="matcher">
+                        <mat-hint *ngIf="!titleFormControl.hasError('required')">
+                            {{'studies-components.required_field' | translate}}</mat-hint>
                         <mat-error *ngIf="titleFormControl.hasError('required')">
-                            {{'studies-components.title_req' | translate}} <strong>{{'studies-components.required' | translate}}</strong>
+                            {{'studies-components.title_req' | translate}}
+                            <strong>{{'studies-components.required' | translate}}</strong>
                         </mat-error>
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.type_edit' | translate}}</mat-label>
                         <mat-select [(ngModel)]="model.type" (click)="model.type = $event.id"
-                            [formControl]="studyTypeFormControl"
-                            [errorStateMatcher]="matcher">
+                            [formControl]="studyTypeFormControl" [errorStateMatcher]="matcher">
                             <mat-option *ngFor="let type of studyTypes" [value]="type.id"
                                 (click)="initializeStudyType(type.id)">
                                 {{selectedLanguage === 'en' ? type.nameEn : type.nameFr}}
                             </mat-option>
                         </mat-select>
-                        <mat-hint *ngIf="!studyTypeFormControl.hasError('required')">{{'studies-components.required_field' | translate}}</mat-hint>
+                        <mat-hint *ngIf="!studyTypeFormControl.hasError('required')">
+                            {{'studies-components.required_field' | translate}}</mat-hint>
                         <mat-error *ngIf="studyTypeFormControl.hasError('required')">
-                            {{'studies-components.type_req' | translate}} <strong>{{'studies-components.required' | translate}}</strong>
+                            {{'studies-components.type_req' | translate}}
+                            <strong>{{'studies-components.required' | translate}}</strong>
                         </mat-error>
                     </mat-form-field>
                 </div>
@@ -153,10 +163,12 @@
                 </div>
                 <div fxLayout="row" fxLayoutGap="1em">
                     <mat-form-field>
-                        <input matInput type="number" placeholder="{{'studies-components.lower_range' | translate}}" [(ngModel)]="model.lowerAgeRange">
+                        <input matInput type="number" placeholder="{{'studies-components.lower_range' | translate}}"
+                            [(ngModel)]="model.lowerAgeRange">
                     </mat-form-field>
                     <mat-form-field>
-                        <input matInput type="number" placeholder="{{'studies-components.upper_range' | translate}}" [(ngModel)]="model.upperAgeRange">
+                        <input matInput type="number" placeholder="{{'studies-components.upper_range' | translate}}"
+                            [(ngModel)]="model.upperAgeRange">
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>{{'studies-components.gender' | translate}}</mat-label>
@@ -171,7 +183,8 @@
                     <div *ngFor="let question of model.questions; let i = index" fxLayout="row"
                         fxLayoutAlign="center center">
                         <mat-form-field>
-                            <input matInput placeholder="{{'studies-components.question' | translate}} {{i + 1}}" [(ngModel)]="question.question">
+                            <input matInput placeholder="{{'studies-components.question' | translate}} {{i + 1}}"
+                                [(ngModel)]="question.question">
                         </mat-form-field>
                         <button mat-icon-button (click)="removeQuestion(i)">
                             <mat-icon>clear</mat-icon>
@@ -185,19 +198,23 @@
                 </div>
                 <div *ngIf="model.type===1">
                     <mat-form-field>
-                        <textarea matInput placeholder="{{'studies-components.description' | translate}}" [(ngModel)]="model.description"></textarea>
+                        <textarea matInput placeholder="{{'studies-components.description' | translate}}"
+                            [(ngModel)]="model.description"></textarea>
                     </mat-form-field>
                 </div>
                 <div *ngIf="model.type===2">
                     <mat-form-field>
-                        <textarea matInput placeholder="{{'studies-components.description' | translate}}" [(ngModel)]="model.description"></textarea>
+                        <textarea matInput placeholder="{{'studies-components.description' | translate}}"
+                            [(ngModel)]="model.description"></textarea>
                     </mat-form-field>
                 </div>
             </mat-card-content>
             <mat-divider [inset]="true"></mat-divider>
             <mat-card-actions align="end">
-                <button mat-button (click)="edit()" *ngIf="editEntryFlag">{{'studies-components.update' | translate}}</button>
-                <button mat-button [disabled]="!studyValid()" (click)="create()" *ngIf="!editEntryFlag">{{'studies-components.submit' | translate}}</button>
+                <button mat-button (click)="edit()"
+                    *ngIf="editEntryFlag">{{'studies-components.update' | translate}}</button>
+                <button mat-button [disabled]="!studyValid()" (click)="create()"
+                    *ngIf="!editEntryFlag">{{'studies-components.submit' | translate}}</button>
                 <button mat-button (click)="close()">{{'studies-components.close' | translate}}</button>
             </mat-card-actions>
         </mat-card>
@@ -205,6 +222,7 @@
     </div>
 
     <div class="mat-elevation-z1">
+        <br>
         <table mat-table [dataSource]="listOfStudies" matSort>
             <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.title' | translate}} </th>
@@ -217,7 +235,8 @@
             </ng-container>
 
             <ng-container matColumnDef="researcher">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.researcher' | translate}} </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.researcher' | translate}}
+                </th>
                 <td mat-cell *matCellDef="let study">{{study.researcher}}</td>
             </ng-container>
 
@@ -253,3 +272,4 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
+<app-study-card></app-study-card>
