--- a/src/app/views/studies/researcher-completed-studies.component.html
+++ b/src/app/views/studies/researcher-completed-studies.component.html
@@ -1,11 +1,18 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 <div *ngIf="showDemo" style="padding-bottom: 3em">
     <mat-card *ngIf="model.type === 0">
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
         <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong> {{ model.creationDate | date: 'dd/MM/yyyy' }}
+            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
+                {{ model.creationDate | date: 'dd/MM/yyyy' }}
             </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.participant' | translate}}:</strong> {{ model.participant }}</mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.participant' | translate}}:</strong>
+                {{ model.participant }}</mat-card-subtitle>
         </mat-card>
         <mat-card-content>
             <div class="qa" *ngFor="let question of model.questions; let i = index">
@@ -15,11 +22,16 @@
                 </div>
                 &nbsp;
                 <mat-radio-group fxLayout="row" fxLayoutAlign="space-evenly" disabled="true">
-                    <mat-radio-button value="1" [checked]="question.answer ===  1">{{'studies-components.stdisagree' | translate}}</mat-radio-button>
-                    <mat-radio-button value="2" [checked]="question.answer ===  2">{{'studies-components.disagree' | translate}}</mat-radio-button>
-                    <mat-radio-button value="3" [checked]="question.answer ===  3">{{'studies-components.neutral' | translate}}</mat-radio-button>
-                    <mat-radio-button value="4" [checked]="question.answer ===  4">{{'studies-components.agree' | translate}}</mat-radio-button>
-                    <mat-radio-button value="5" [checked]="question.answer ===  5">{{'studies-components.stagree' | translate}}</mat-radio-button>
+                    <mat-radio-button value="1" [checked]="question.answer ===  1">
+                        {{'studies-components.stdisagree' | translate}}</mat-radio-button>
+                    <mat-radio-button value="2" [checked]="question.answer ===  2">
+                        {{'studies-components.disagree' | translate}}</mat-radio-button>
+                    <mat-radio-button value="3" [checked]="question.answer ===  3">
+                        {{'studies-components.neutral' | translate}}</mat-radio-button>
+                    <mat-radio-button value="4" [checked]="question.answer ===  4">
+                        {{'studies-components.agree' | translate}}</mat-radio-button>
+                    <mat-radio-button value="5" [checked]="question.answer ===  5">
+                        {{'studies-components.stagree' | translate}}</mat-radio-button>
                 </mat-radio-group>
             </div>
             <mat-form-field>
@@ -40,9 +52,11 @@
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
         <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong> {{ model.creationDate | date: 'dd/MM/yyyy' }}
+            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
+                {{ model.creationDate | date: 'dd/MM/yyyy' }}
             </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.participant' | translate}}:</strong> {{ model.participant }}</mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.participant' | translate}}:</strong>
+                {{ model.participant }}</mat-card-subtitle>
         </mat-card>
         &nbsp;
         &nbsp;
@@ -76,9 +90,11 @@
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
         <mat-card-subtitle>{{studyTypes | findValue : model.type : selectedLanguage}}</mat-card-subtitle>
         <mat-card>
-            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong> {{ model.creationDate | date: 'dd/MM/yyyy' }}
+            <mat-card-subtitle><strong>{{'studies-components.creation_date' | translate}}:</strong>
+                {{ model.creationDate | date: 'dd/MM/yyyy' }}
             </mat-card-subtitle>
-            <mat-card-subtitle><strong>{{'studies-components.participant' | translate}}:</strong> {{ model.participant }}</mat-card-subtitle>
+            <mat-card-subtitle><strong>{{'studies-components.participant' | translate}}:</strong>
+                {{ model.participant }}</mat-card-subtitle>
         </mat-card>
         <mat-card-content>
             <div class="qa" *ngFor="let entry of model.entries; let i = index">
@@ -108,20 +124,18 @@
     </mat-card>
 </div>
 
-<nav mat-tab-nav-bar *ngIf="loggedInUser.role === 0 || loggedInUser.role === 1" selectedIndex="0">
-    <a mat-tab-link label="Available" routerLink="/available-studies">{{'studies-components.published_studies' | translate}}</a>
-    <a mat-tab-link label="Chat Logs" routerLink="/chatlog-view">{{'studies-components.chat_logs' | translate}}</a>
-    <a mat-tab-link label="Completed Studies" routerLink="/researcher-completed-studies" routerLinkActive #rla="routerLinkActive"
-    [active]="rla.isActive">{{'studies-components.completed_studies' | translate}}</a>
-</nav>
-
-<div fxLayout="row" fxLayoutGap="1em" fxLayoutAlign="center center">
-    <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{'studies-components.search' | translate}}">
-    </mat-form-field>
+<div class="input-group md-form form-sm form-1 pl-0">
+    <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-text1" style="background: #c78fff;">
+            <mat-icon>search</mat-icon>
+        </span>
+    </div>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{'studies-components.search' | translate}}"
+        class="form-control my-0 py-1" type="text" aria-label="Search">
 </div>
 
 <div class="mat-elevation-z1">
+    <br>
     <table mat-table [dataSource]="listOfStudies" matSort>
         <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.title' | translate}} </th>
@@ -134,7 +148,8 @@
         </ng-container>
 
         <ng-container matColumnDef="participant">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.participant' | translate}} </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'studies-components.participant' | translate}}
+            </th>
             <td mat-cell *matCellDef="let study">{{study.participant}}</td>
         </ng-container>
 
