--- a/src/app/views/users/users.component.html
+++ b/src/app/views/users/users.component.html
@@ -1,18 +1,29 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
-<div fxLayout="row" fxLayoutGap="1em" fxLayoutAlign="center center">
-    <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{'users-components.search' | translate}}">
-    </mat-form-field>
-    <button color="accent" mat-raised-button (click)="addEntry()">{{'users-components.add_button' | translate}}</button>
+<div class="input-group md-form form-sm form-1 pl-0">
+    <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-text1" style="background: #c78fff;">
+            <mat-icon>search</mat-icon>
+        </span>
+    </div>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="{{'studies-components.search' | translate}}"
+        class="form-control my-0 py-1" type="text" aria-label="Search">
+    <button class="btn-gradient blue" mat-raised-button
+        (click)="addEntry()">{{'users-components.add_button' | translate}}</button>
 </div>
 
 <div *ngIf="entryFlag || editEntryFlag">
+    <br>
     <mat-card>
         <mat-card-title class="entry-card-title">{{editEntryFlag ? "Edit Entry" : "Add Entry"}}</mat-card-title>
         <mat-card-content>
             <div fxLayout="row" fxLayoutGap="1em">
                 <mat-form-field>
-                    <input matInput placeholder="{{'users-components.enter_username' | translate}}" [(ngModel)]="model.username">
+                    <input matInput placeholder="{{'users-components.enter_username' | translate}}"
+                        [(ngModel)]="model.username">
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Select a role</mat-label>
@@ -27,7 +38,8 @@
         <mat-divider [inset]="true"></mat-divider>
         <mat-card-actions align="end">
             <button mat-button (click)="edit()" *ngIf="editEntryFlag">{{'users-components.update' | translate}}</button>
-            <button mat-button (click)="create()" *ngIf="!editEntryFlag">{{'users-components.submit' | translate}}</button>
+            <button mat-button (click)="create()"
+                *ngIf="!editEntryFlag">{{'users-components.submit' | translate}}</button>
             <button mat-button (click)="close()">{{'users-components.close' | translate}}</button>
         </mat-card-actions>
     </mat-card>
@@ -35,12 +47,13 @@
 </div>
 
 <div class="mat-elevation-z1">
+    <br>
     <table mat-table [dataSource]="users" matSort>
         <ng-container matColumnDef="username">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'users-components.username' | translate}} </th>
             <td mat-cell *matCellDef="let user"> {{user.username}} </td>
         </ng-container>
-        
+
         <ng-container matColumnDef="role">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
             <td mat-cell *matCellDef="let user"> {{roles | findValue : user.role : selectedLanguage}} </td>
