--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -47,6 +47,10 @@
             <button mat-button routerLink="/profile" routerLinkActive="mat-accent">{{loggedInUser.firstName}}
                 {{loggedInUser.lastName}}</button>
         </li>
+        <li *ngIf="userIsAuthenticated && token.role === 1">
+            <button mat-button routerLinkActive="mat-accent">{{loggedInUser.firstName}}
+                {{loggedInUser.lastName}}</button>
+        </li>
         <li *ngIf="userIsAuthenticated && token.role === 0">
             <button mat-button routerLink="/users"
                 routerLinkActive="mat-accent">{{'app-header.users' | translate}}</button>
