--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,6 +1,5 @@
 <div *ngIf="showHome" class="align-self-center mt-5">
   <div class="row">
-
     <div class="col-md-4">
       <div class="card">
         <div class="card-image"></div>
@@ -40,8 +39,16 @@
         </div>
       </div>
     </div>
-
   </div>
+
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <button class="d-flex justify-content-center btn-gradient purple large" routerLink="/survey-maker" mat-raised-button>Survey Form</button>
+    </div>
+    <div class="col-md-4"></div>
+  </div>
+
 </div>
 
 <div class="d-flex justify-content-center">
