--- a/src/app/views/surveys/survey-maker/survey-maker.component.html
+++ b/src/app/views/surveys/survey-maker/survey-maker.component.html
@@ -70,6 +70,7 @@
       <button mat-raised-button color="accent" (click)="preview()">Show Preview</button>
       &nbsp;
       <button mat-raised-button color="accent" *ngIf="showDebug" (click)="debug()">Show Debug Information</button>
+      <button mat-raised-button color="primary" (click)="createSurvey()">Save Survey</button>
     </mat-card>
     &nbsp;
   <!-- This grid-tile displays a preview of the survey -->
@@ -78,4 +79,15 @@
         <survey-view [(template)]="model"></survey-view>
       </span>
     </mat-card>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="space-between">
+    <table mat-table [dataSource]="surveys">
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Survey Title </th>
+        <td mat-cell *matCellDef="let survey"> {{survey.title}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
   </div>
