--- a/src/app/views/surveys/survey-maker/survey-maker.component.html
+++ b/src/app/views/surveys/survey-maker/survey-maker.component.html
@@ -48,7 +48,7 @@
           <mat-checkbox color="primary" [(ngModel)]="element.isRequired">Make Question Required</mat-checkbox>
           <br />
           <!-- This section loads different components based on the type of question that the user selects -->
-          <div *ngIf="element.type === 'checkbox'">
+          <div *ngIf="element.type === 'checkbox' || element.type === 'radiogroup'">
             <checkbox-form [element]="element"></checkbox-form>
           </div>
           <br />
@@ -66,11 +66,17 @@
         </span>
         <br />
         <br />
+        <button mat-raised-button color="accent" (click)="makeEditable()">Make Survey Editable</button>
+        &nbsp;
+        <br/>
+        <br />
         <button mat-raised-button color="accent" (click)="preview()">Show Preview</button>
         &nbsp;
         <button mat-raised-button color="accent" *ngIf="showDebug" (click)="debug()">Show Debug Information</button>
         &nbsp;
-        <button mat-raised-button color="primary" (click)="createSurvey()">Save Survey</button>
+        <button mat-raised-button color="primary" *ngIf="typeOf(model._id) === 'undefined'" (click)="createSurvey()">Save Survey</button>
+        &nbsp;
+        <button mat-raised-button color="primary" *ngIf="typeOf(model._id) !== 'undefined'" (click)="updateSurvey()">Update Survey</button>
         &nbsp;
       </mat-card>
       <!-- This grid-tile displays a preview of the survey -->
@@ -92,36 +98,34 @@
 </div>
 <br />
 <div fxLayout="row" fxLayoutAlign="space-between" *ngIf="showTable">
-  <table mat-table fxFlex="100%" [dataSource]="surveys">
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Survey Title </th>
-      <td mat-cell *matCellDef="let survey"> {{survey.title}} </td>
-    </ng-container>
-    <ng-container matColumnDef="showProgressBar">
-      <th mat-header-cell *matHeaderCellDef> Progress Bar </th>
-      <td mat-cell *matCellDef="let survey"> {{survey.showProgressBar}} </td>
-    </ng-container>
-    <ng-container matColumnDef="mode">
-      <th mat-header-cell *matHeaderCellDef> Display Mode </th>
-      <td mat-cell *matCellDef="let survey"> {{survey.mode}} </td>
-    </ng-container>
-    <ng-container matColumnDef="elements">
-      <th mat-header-cell *matHeaderCellDef> Survey Questions </th>
-      <td mat-cell *matCellDef="let survey">
-        <span *ngFor="let  element of survey.pages[0].elements">
-          {{element.title}}
-          <br>
-        </span>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="options">
-      <th mat-header-cell *matHeaderCellDef> Options </th>
-      <td mat-cell *matCellDef="let survey; let i = index">
-        <button mat-raised-button color="accent" (click)="loadSurvey(i)">Load</button>
-        <button mat-raised-button color="warn" (click)="deleteSurvey(i)">Delete</button>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <div fxFlex="100%">
+    <table mat-table [dataSource]="surveys">
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef> Survey Title </th>
+        <td mat-cell *matCellDef="let survey"> {{survey.title}} </td>
+      </ng-container>
+      <ng-container matColumnDef="elements">
+        <th mat-header-cell *matHeaderCellDef> Survey Questions </th>
+        <td mat-cell *matCellDef="let survey">
+          <span *ngFor="let element of survey.pages[0].elements">
+            {{'Question: ' + element.title}}
+            <br>
+            <span *ngFor="let choice of element.choices; j as index">
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{'Choice: ' + choice}}
+              <br/>
+            </span>
+          </span>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="options">
+        <th mat-header-cell *matHeaderCellDef> Options </th>
+        <td mat-cell *matCellDef="let survey; let i = index">
+          <button mat-raised-button color="accent" (click)="loadSurvey(i)">Load</button>
+          <button mat-raised-button color="warn" (click)="deleteSurvey(i)">Delete</button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
 </div>
