study cards, more fields in profile,

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -41,12 +41,9 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <button class="d-flex justify-content-center btn-gradient purple large" routerLink="/survey-maker" mat-raised-button>Survey Form</button>
-    </div>
-    <div class="col-md-4"></div>
+  <div class="text-center">
+    <button class="btn-gradient purple large" routerLink="/survey-maker" mat-raised-button>Survey
+      Form</button>
   </div>
 
 </div>
