Implemented study-page component

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -43,7 +43,7 @@
 
 
   <div class="text-center">
-    <button class="btn-gradient purple large" routerLink="/survey-maker" mat-raised-button>Survey
+    <button class="btn-gradient purple large" routerLink="/study-page" mat-raised-button>Survey
       Form</button>
   </div>
 </div>
