Added Diary Forms and Study models

--- a/src/app/views/studies/available.component.html
+++ b/src/app/views/studies/available.component.html
@@ -1,3 +1,8 @@
+<div class="text-center">
+    <button class="btn-gradient purple large" routerLink="/study-page" mat-raised-button>Survey
+      Form</button>
+</div>
+
 <div *ngIf="displayStudy" style="padding-bottom: 3em">
     <mat-card *ngIf="model.type === 0">
         <mat-card-title class="entry-card-title">{{model.title}}</mat-card-title>
